Customized the site a little bit, ATTEMPTING to add confetti but its not working!!!!!!!!!!!!!!!!!!!

--- a/style.css
+++ b/style.css
@@ -2,5 +2,11 @@ body {
     font-family: "Silkscreen", sans-serif;
     font-weight: 400;
     font-style: normal;
+    background-color: rgb(207, 233, 207);
      
 }
+
+.lolz {
+    margin: 20px;
+}
+
